updated the auth service impl for maintainability and security reasons