@@ -14,12 +14,12 @@ import com.devb.estores.repository.UserRepo;
 import com.devb.estores.requestdto.AuthRequest;
 import com.devb.estores.requestdto.UserRequest;
 import com.devb.estores.responsedto.AuthResponse;
+import com.devb.estores.responsedto.UserResponse;
 import com.devb.estores.security.JwtService;
 import com.devb.estores.service.AuthService;
 import com.devb.estores.util.CookieManager;
 import com.devb.estores.util.ResponseStructure;
 import com.devb.estores.util.SimpleResponseStructure;
-import com.devb.estores.responsedto.UserResponse;
 import io.jsonwebtoken.ExpiredJwtException;
 import io.jsonwebtoken.MalformedJwtException;
 import io.jsonwebtoken.UnsupportedJwtException;
@@ -46,7 +46,6 @@ import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 @Service
 public class AuthServiceImpl implements AuthService {
@@ -61,6 +60,7 @@ public class AuthServiceImpl implements AuthService {
     private final JwtService jwtService;
     private final AuthenticationManager authenticationManager;
     private final CookieManager cookieManager;
+    private final Random random;
 
     public AuthServiceImpl(UserRepo userRepo,
                            AccessTokenRepo accessTokenRepo,
@@ -71,7 +71,8 @@ public class AuthServiceImpl implements AuthService {
                            CacheStore<User> userCacheStore,
                            JwtService jwtService,
                            AuthenticationManager authenticationManager,
-                           CookieManager cookieManager) {
+                           CookieManager cookieManager,
+                           Random random) {
         this.userRepo = userRepo;
         this.accessTokenRepo = accessTokenRepo;
         this.refreshTokenRepo = refreshTokenRepo;
@@ -82,12 +83,15 @@ public class AuthServiceImpl implements AuthService {
         this.jwtService = jwtService;
         this.authenticationManager = authenticationManager;
         this.cookieManager = cookieManager;
+        this.random = random;
     }
 
     @Value("${token.expiry.access.seconds}")
     private long accessTokenExpirySeconds;
     @Value("${token.expiry.refresh.seconds}")
     private long refreshTokenExpirySeconds;
+
+    private String failedRefresh = "Failed to refresh login";
 
     @Override
     public ResponseEntity<ResponseStructure<UserResponse>> registerUser(UserRequest userRequest, UserRole role) {
@@ -124,9 +128,10 @@ public class AuthServiceImpl implements AuthService {
         OtpModel otp = otpCache.get(otpModel.getEmail());
         User user = userCacheStore.get(otpModel.getEmail());
 
-        if (otp == null) throw new OtpExpiredException("Failed to verify OTP");
-        if (user == null) throw new RegistrationSessionExpiredException("Failed to verify OTP");
-        if (otp.getOtp() != otpModel.getOtp()) throw new IncorrectOTPException("Failed to verify OTP");
+        String errorMessage = "Failed to verify OTP";
+        if (otp == null) throw new OtpExpiredException(errorMessage);
+        if (user == null) throw new RegistrationSessionExpiredException(errorMessage);
+        if (otp.getOtp() != otpModel.getOtp()) throw new IncorrectOTPException(errorMessage);
 
         user.setEmailVerified(true);
         user = userRepo.save(user);
@@ -164,18 +169,18 @@ public class AuthServiceImpl implements AuthService {
                     .setData(AuthResponse.builder()
                             .userId(user.getUserId())
                             .username(user.getUsername())
-                            .roles(user.getRoles().stream().map(UserRole::name).collect(Collectors.toList()))
+                            .roles(user.getRoles().stream().map(UserRole::name).toList())
                             .isAuthenticated(true)
                             .accessExpiration(accessTokenExpirySeconds)
                             .refreshExpiration(refreshTokenExpirySeconds)
                             .build()));
-        }).orElseThrow(() -> new UsernameNotFoundException("Failed to refresh login"));
+        }).orElseThrow(() -> new UsernameNotFoundException(failedRefresh));
         else throw new UsernameNotFoundException("Authentication failed");
     }
 
     @Override
     public ResponseEntity<ResponseStructure<AuthResponse>> refreshLogin(String refreshToken, String accessToken) {
-        if (refreshToken == null) throw new UserNotLoggedInException("Failed to refresh login");
+        if (refreshToken == null) throw new UserNotLoggedInException(failedRefresh);
 
         String username = jwtService.extractUsername(refreshToken);
         Date refreshExpiration = jwtService.extractExpiry(refreshToken);
@@ -202,7 +207,7 @@ public class AuthServiceImpl implements AuthService {
 
         HttpHeaders headers = new HttpHeaders();
 
-        User user = userRepo.findByUsername(username).orElseThrow(() -> new UsernameNotFoundException("Failed to refresh login"));
+        User user = userRepo.findByUsername(username).orElseThrow(() -> new UsernameNotFoundException(failedRefresh));
         // validating if the accessToken is not already present
         if (accessToken == null) this.generateAccessToken(user, headers);
 
@@ -220,7 +225,7 @@ public class AuthServiceImpl implements AuthService {
                 .setData(AuthResponse.builder()
                         .userId(user.getUserId())
                         .username(user.getUsername())
-                        .roles(user.getRoles().stream().map(UserRole::name).collect(Collectors.toList()))
+                        .roles(user.getRoles().stream().map(UserRole::name).toList())
                         .isAuthenticated(true)
                         .accessExpiration(evaluatedAccessExpiration)
                         .refreshExpiration(evaluatedRefreshExpiration)
@@ -250,18 +255,17 @@ public class AuthServiceImpl implements AuthService {
 
         return userRepo.findByUsername(username).map(user -> {
             // blocking all other access tokens
-            List<AccessToken> accessTokens = accessTokenRepo.findAllByUserAndIsBlocked(user, false).stream()
-                    .peek(at -> {
+            accessTokenRepo.findAllByUserAndIsBlocked(user, false)
+                    .forEach(at -> {
                         if (!at.getToken().equals(accessToken)) at.setBlocked(true);
-                    })
-                    .collect(Collectors.toList());
-            accessTokenRepo.saveAll(accessTokens);
+                        accessTokenRepo.save(at);
+                    });
             // blocking all other refresh tokens
-            List<RefreshToken> refreshTokens = refreshTokenRepo.findALLByUserAndIsBlocked(user, false).stream()
-                    .peek(rt -> {
+            refreshTokenRepo.findALLByUserAndIsBlocked(user, false)
+                    .forEach(rt -> {
                         if (!rt.getToken().equals(refreshToken)) rt.setBlocked(true);
-                    }).collect(Collectors.toList());
-            refreshTokenRepo.saveAll(refreshTokens);
+                        refreshTokenRepo.save(rt);
+                    });
 
             return ResponseEntity.ok(new SimpleResponseStructure().setStatus(HttpStatus.OK.value())
                     .setMessage("Successfully revoked access from all other devices"));
@@ -275,13 +279,17 @@ public class AuthServiceImpl implements AuthService {
 
         return userRepo.findByUsername(username).map(user -> {
             // blocking all other access tokens
-            List<AccessToken> accessTokens = accessTokenRepo.findAllByUserAndIsBlocked(user, false).stream()
-                    .peek(at -> at.setBlocked(true)).collect(Collectors.toList());
-            accessTokenRepo.saveAll(accessTokens);
+            accessTokenRepo.findAllByUserAndIsBlocked(user, false)
+                    .forEach(at -> {
+                        at.setBlocked(true);
+                        accessTokenRepo.save(at);
+                    });
             // blocking all other refresh tokens
-            List<RefreshToken> refreshTokens = refreshTokenRepo.findALLByUserAndIsBlocked(user, false).stream()
-                    .peek(rt -> rt.setBlocked(true)).collect(Collectors.toList());
-            refreshTokenRepo.saveAll(refreshTokens);
+            refreshTokenRepo.findALLByUserAndIsBlocked(user, false)
+                    .forEach(rt -> {
+                        rt.setBlocked(true);
+                        refreshTokenRepo.save(rt);
+                    });
 
             // resetting tokens with blank value and 0 maxAge
             HttpHeaders headers = new HttpHeaders();
@@ -343,7 +351,7 @@ public class AuthServiceImpl implements AuthService {
         return UserResponse.builder()
                 .userId(user.getUserId())
                 .username(user.getUsername())
-                .roles(user.getRoles().stream().map(UserRole::name).collect(Collectors.toList()))
+                .roles(user.getRoles().stream().map(UserRole::name).toList())
                 .email(user.getEmail())
                 .isEmailVerified(user.isEmailVerified())
                 .build();
@@ -361,7 +369,7 @@ public class AuthServiceImpl implements AuthService {
 }
 
     private Integer generateOTP() {
-        return new Random().nextInt(100000, 999999);
+       return random.nextInt(100000, 999999);
     }
 
     private void sendOTPToMailId(User user, int otp) throws MessagingException {
